# rust-api-frameworks

./: .gitignore  Cargo.toml  README.md  cargo.toml  docker-compose.yaml
vehicle-manager-actix-web/: Cargo.toml
vehicle-manager-actix-web/src/: main.rs
vehicle-manager-actix-web/src/config/: mod.rs
vehicle-manager-actix-web/src/handlers/: mod.rs  vehicles.rs
vehicle-manager-actix-web/src/helpers/: pagination.rs
vehicle-manager-actix-web/src/models/: mod.rs  vehicle.rs
vehicle-manager-actix-web/src/models/repositories/: mod.rs  vehicle.rs
vehicle-manager-actix-web/src/routers/: mod.rs  vehicles.rs
vehicle-manager-actix-web/src/schemas/: errors.rs  vehicle.rs
vehicle-manager-actix-web/src/services/: vehicle.rs
vehicle-manager-axum/: Cargo.toml
vehicle-manager-axum/src/: main.rs  routers.rs  services.rs
vehicle-manager-axum/src/models/: vehicle.rs
vehicle-manager-axum/src/routers/: vehicles.rs
vehicle-manager-axum/src/services/: vehicles.rs
