[package]
name = "vehicle-manager-actix-web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
mongodb = "3"
log = "0.4"
utoipa-actix-web = "0.1.2"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
