[package]
name = "vehicle-manager-actix-web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
mongodb = "3"
log = "0.4"
utoipa-actix-web = "0.1"
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
derive_more = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
testcontainers = "*"
testcontainers-modules = { version = "*", features = ["mongo"] }
actix-http = "*"
serde_json = "*"
