[package]
name = "vehicle-manager-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = ">=0.8.4", features = ["http2", "macros", "ws"] }
serde = { version = ">=1.0", features = ["derive"] }
tokio = { version = ">=1.47", features = ["full"] }
uuid = { version = ">=1.18", features = ["v4"] }
